src/test/resources/purescript_examples/failing/UnusableTypeClassMethod.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith UnusableDeclaration\n')
  PSASTWrapperElement(Program)
    PSASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSASTWrapperElement(ModuleName)
        PSASTWrapperElement(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(NamedBinder)
        <empty list>
      PSASTWrapperElement(TypeClassDeclaration)
        PsiElement(class)('class')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(TypeConstructor)
          PSASTWrapperElement(Qualified)
            PsiElement(proper name)('C')
            PsiElement(whitespace)(' ')
        PSASTWrapperElement(TypeAtom)
          PSASTWrapperElement(GenericIdentifier)
            PsiElement(identifier)('a')
            PsiElement(whitespace)(' ')
        PSASTWrapperElement(TypeAtom)
          PSASTWrapperElement(GenericIdentifier)
            PsiElement(identifier)('b')
            PsiElement(whitespace)(' ')
        PSASTWrapperElement(Implies)
          <empty list>
        PsiElement(where)('where')
        PsiElement(whitespace)('\n  -- type doesn't contain `a`, which is also required to determine an instance\n  ')
        PSASTWrapperElement(TypeDeclaration)
          PSASTWrapperElement(TypeAnnotationName)
            PsiElement(identifier)('c')
            PsiElement(whitespace)(' ')
          PsiElement(::)('::')
          PsiElement(whitespace)(' ')
          PSASTWrapperElement(Type)
            PSASTWrapperElement(TypeAtom)
              PSASTWrapperElement(GenericIdentifier)
                PsiElement(identifier)('b')
                PsiElement(whitespace)('\n\n')
